--- a/impressum.html
+++ b/impressum.html
@@ -17,7 +17,7 @@
       </style>
 
 
-      <img id="logo" src="imgs/logo.jpg" alt="">
+      <img id="logo" src="imgs/Logo.jpg" alt="">
     </header>
     <nav>
 
