--- a/poetries.html
+++ b/poetries.html
@@ -17,7 +17,7 @@
       </style>
 
 
-      <img id="logo" src="imgs/logo.jpg" alt="">
+      <img id="logo" src="imgsLogo.jpg" alt="">
     </header>
     <nav>
 
