--- a/impressum.html
+++ b/impressum.html
@@ -9,15 +9,9 @@
 <body>
   <div id="container">
     <header>
-      <style>
-        #logo{
-          width: 300px;
-          height: auto;
-        }
-      </style>
-
-
-      <img id="logo" src="imgs/Logo.jpg" alt="">
+      <div class="logo">
+        <img src="imgs/Logo.jpg" width="300" alt="">
+      </div>
     </header>
     <nav>
 
